--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,8 @@ body {
 
 .contact-info__sub-header {
   color: var(--secondary-text-color);
+  text-decoration-color: var(--text-decoration-color);
+  text-decoration-line: underline;
   margin-bottom: 30px;
 }
 
@@ -123,8 +125,8 @@ body {
 
 .contact-info__avatar {
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
+  width: 160px;
+  height: 160px;
   object-fit: cover;
   border: 3px solid;
   border-color: var(--text-decoration-color);
@@ -158,6 +160,8 @@ body {
 
 .skills__header {
   color: var(--secondary-text-color);
+  text-decoration-color: var(--text-decoration-color);
+  text-decoration-line: underline;
   text-align: center;
   margin-bottom: 15px;
 }
@@ -174,6 +178,8 @@ body {
 
 .experiences__header {
   color: var(--secondary-text-color);
+  text-decoration-color: var(--text-decoration-color);
+  text-decoration-line: underline;
   text-align: left;
   margin-bottom: 20px;
 }
@@ -226,6 +232,8 @@ body {
 
 .additional-info__education-header {
   color: var(--secondary-text-color);
+  text-decoration-color: var(--text-decoration-color);
+  text-decoration-line: underline;
   text-align: left;
   margin-bottom: 20px;
 }
@@ -253,6 +261,8 @@ body {
 
 .additional-info__languages-header {
   color: var(--secondary-text-color);
+  text-decoration-color: var(--text-decoration-color);
+  text-decoration-line: underline;
   text-align: left;
   margin-bottom: 20px;
 }
